# cfdKernel

./: .gitignore  CMakeLists.txt  main.cpp  main_fertzingerExample.cpp  testModule.ixx
FIELD/: algebra.cpp  dataView.cpp  dataView.h  field.cpp  field.h
FVM/: collocatedField.cpp  collocatedField.h
LINALG/: linearEquationSolvers.cpp  linearEquationSolvers.h  matrixOperations.cpp  matrixOperations.h
MESH/: baseMesh.h
src/: CMakeLists.txt  globalTypeDefs.h
src/FIELD/: algebra.h  field.cpp  field.h  fieldProxy.h  fieldTypeDefs.h  fieldView.h
src/FVM/: coefficientMatrixGenerator.cpp  coefficientMatrixGenerator.h  collocatedField.cpp  collocatedField.h  linEqSystem.cpp  linEqSystem.h
src/LINALG/: linalgTypeDefs.h  linearEquationSolvers.cpp  linearEquationSolvers.h  matrixOperations.cpp  matrixOperations.h
src/MESH/: structured2d.cpp  structured2d.h
src/SOLVER/: scalarTransport.cpp  scalarTransport.h
test/: APPLICATION_TEST.cpp  BLAZE_TEST.cpp  CMakeLists.txt  FIELD_Test.cpp  FVM_Test.cpp  LINALG_Test.cpp  MESH_Test.cpp
